--- a/wren-ai-service/tools/dev/.env.example
+++ b/wren-ai-service/tools/dev/.env.example
@@ -11,7 +11,7 @@ IBIS_SERVER_PORT=8000
 # version
 # CHANGE THIS TO THE LATEST VERSION
 WREN_PRODUCT_VERSION=development
-WREN_ENGINE_VERSION=latest
+WREN_ENGINE_VERSION=0.5.0
 WREN_AI_SERVICE_VERSION=latest
 WREN_UI_VERSION=latest
 IBIS_SERVER_VERSION=latest
