--- a/wren-ai-service/.env.dev.example
+++ b/wren-ai-service/.env.dev.example
@@ -53,12 +53,12 @@ WREN_UI_ENDPOINT=http://localhost:3000
 WREN_IBIS_ENDPOINT=http://localhost:8000
 WREN_IBIS_SOURCE=bigquery
 ### this is a base64 encoded string of the MDL
-WREN_IBIS_MANIFEST= 
+WREN_IBIS_MANIFEST=
 ### this is a base64 encode string of the connection info
 WREN_IBIS_CONNECTION_INFO=
 
 ## when using wren_engine as the engine
-WREN_ENGINE_ENDPOINT=http://localhost:8080
+WREN_ENGINE_MANIFEST=
 
 # Evaluation
 DATASET_NAME=book_2
